--- a/public/themes/simpleboot3/portal/contact.html
+++ b/public/themes/simpleboot3/portal/contact.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>联系我们 - 德州一帆</title>
-    <meta name="keywords" content="联系我们">
-    <meta name="description" content="">
-    <meta name="description" content="">
+    <title>联系我们 - 德州一帆网络科技有限公司</title>
+    <meta name="keywords" content="德州app开发,德州技术外包,德州小程序开发,山东app定制">
+    <meta name="description" content="德州一帆网络科技有限公司专业开发app,微信小程序，微信公众号,各类网站等应用">
+
     <link href="__TMPL__/public/assets/static/css/bootstrap.css" rel="stylesheet">
     <link href="__TMPL__/public/assets/static/css/app.css" rel="stylesheet">
     <link href="__TMPL__/public/assets/static/css/animate.css" rel="stylesheet" type="text/css" media="all">
@@ -78,13 +78,11 @@
                 <div class="col-md-6 wow fadeInRight">
                     <h2>给我们留言</h2>
                     <p class="need">如果有需求请花几分钟时间在下边表格上填妥需求信息，我们将针 对您的需求与您取得联系~</p>
-                    <input type="text" name="post[name]" id='name' maxlength="4" placeholder="请输入您的联系姓名"
+                    <input type="text" name="post[name]" id='name' maxlength="4" placeholder="请输入您的联系姓名" class="text">
+                    <input type="tel" name="post[phone]" id="phone" maxlength="11" placeholder="请输入您的联系电话" class="text">
+                    <input type="email" name="post[email]" id="email" maxlength="11" placeholder="请输入您的联系邮箱"
                         class="text">
-                    <input type="tel" name="post[phone]" id="phone" maxlength="11" placeholder="请输入您的联系电话"
-                        class="text">
-                    <input type="email"  name="post[email]" id="email" maxlength="11" placeholder="请输入您的联系邮箱"
-                           class="text">
-                    <textarea class="text" name="post[buisiness]" id="buisiness"  maxlength="50"
+                    <textarea class="text" name="post[buisiness]" id="buisiness" maxlength="50"
                         placeholder="详细描述您的需求..."></textarea>
                     <input type="submit" value="立即提交" id="btnSubmit" name="btnSubmit" class="submit">
                 </div>
