--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -237,7 +237,7 @@
             </div>
         </div>
         <div class="text-center">
-            <a href="javascript:;" target="_blank" rel="nofollow" class="btns btn_more wow rubberBand">免费获取解决方案</a>
+            <a href="{:cmf_url('portal/List/index',array('id'=>25))}" target="_blank" rel="nofollow" class="btns btn_more wow rubberBand">免费获取解决方案</a>
         </div>
     </div>
     <div class="container">
