--- a/public/themes/default/public/header/header.html
+++ b/public/themes/default/public/header/header.html
@@ -10,27 +10,27 @@
         <a href="{:cmf_url('portal/index/index')}">首页</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/carbontrace.html">Carbon Trace</a>
+        <a href="/portal/carbontrace.html">碳足迹</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/products.html">Products</a>
+        <a href="/portal/products.html">产品</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/supplychain.html">Supply Chain</a>
+        <a href="/portal/supplychain.html">供应链</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/warehouse.html">Warehouse</a>
+        <a href="/portal/warehouse.html">仓储</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/about.html">About</a>
+        <a href="/portal/about.html">关于我们</a>
       </div>
     </div>
     <div class="header_box_btn">
-      <a href="http://www.ecocarbontrace.com/" target="_blank">log In</a>
+      <a href="http://www.ecocarbontrace.com/" target="_blank">登录</a>
     </div>
     <div class="header_box_language">
-      <!--<img src="__TMPL__/static/img/language.png" alt="">-->
-      <a href="?_design_theme=default">中文</a>|<a href="?_design_theme=default_en-us">En</a>
+      <a href="?_design_theme=default_en-us"> <img src="__TMPL__/static/img/language.png" alt=""></a>
+<!--      <a href="?_design_theme=default">中文</a>|<a href="?_design_theme=default_en-us">En</a>-->
     </div>
 
     <!-- 手机和平板 -->
