--- a/public/themes/default_en-us/public/header/header.html
+++ b/public/themes/default_en-us/public/header/header.html
@@ -30,7 +30,8 @@
     </div>
     <div class="header_box_language">
      <!-- <img src="__TMPL__/static/img/language.png" alt="">-->
-      <a href="?_design_theme=default">中文</a>|<a href="?_design_theme=default_en-us">En</a>
+      <a href="?_design_theme=default"> <img src="__TMPL__/static/img/language.png" alt=""></a>
+<!--      <a href="?_design_theme=default">中文</a>|<a href="?_design_theme=default_en-us">En</a>-->
     </div>
 
     <!-- 手机和平板 -->
