--- a/public/themes/default_en-us/portal/about.html
+++ b/public/themes/default_en-us/portal/about.html
@@ -5,6 +5,11 @@
 <css file="__TMPL__/static/css/about.css" />
 
 <body>
+<link type="text/css" rel="stylesheet" href="__TMPL__/static/css/ui-dialog.css">
+<script type="text/javascript" src="__TMPL__/static/js/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="__TMPL__/static/js/jquery.form.min.js"></script>
+<script type="text/javascript" src="__TMPL__/static/js/Validform_v5.3.2_min.js"></script>
+<script type="text/javascript" src="__TMPL__/static/js/dialog-plus-min.js"></script>
   <!-- header -->
   <include file="public@header/header" />
 
@@ -86,25 +91,25 @@
 
           </div>
           <div class="contact_box_right">
-            <form action="about/submitForm" method="post" class="contact_box_right_box">
+            <form id="feedback_form" name="feedback_form" url="{:url('Form/addPost')}" method="post" class="contact_box_right_box">
               <div class="contact_box_right_item">
                 <div class="contact_box_right_item_title">Full Name</div>
-                <input type="text" name="name" id="name" placeholder="Full Name">
+                <input type="text" name="post[name]" id="name" placeholder="Full Name">
               </div>
               <div class="contact_box_right_item">
                 <div class="contact_box_right_item_title">Phone number</div>
-                <input type="text" name="phone" id="phone" placeholder="Phone number">
+                <input type="text" name="post[phone]" id="phone" placeholder="Phone number">
               </div>
               <div class="contact_box_right_item width100">
                 <div class="contact_box_right_item_title">Email</div>
-                <input type="text" name="email" id="email" placeholder="Email">
+                <input type="text" name="post[email]" id="email" placeholder="Email">
               </div>
               <div class="contact_box_right_item width100">
                 <div class="contact_box_right_item_title">Tell me your though</div>
-                <textarea name="content" id="content" cols="30" rows="10" placeholder="Tell me your though"></textarea>
+                <textarea name="post[buisiness]" id="buisiness" cols="30" rows="10" placeholder="Tell me your though"></textarea>
               </div>
               <div class="contact_box_right_btn" id="sendBtn">
-                <input type="submit" value="Send message">
+                <input type="submit" value="Send message" id="btnSubmit" name="btnSubmit">
               </div>
             </form>
 
@@ -124,41 +129,47 @@
   <!-- footer -->
   <include file="public@footer/footer" />
 </body>
-
+<script type="text/javascript" src="__TMPL__/static/js/common.js"></script>
+<script type="text/javascript">
+  $(function () {
+    //初始化发表评论表单
+    AjaxInitForm('#feedback_form', '#btnSubmit', 1);
+  });
+</script>
 </html>
 
 <script>
   // 监听表单提交事件
-  document.querySelector('.contact_box_right_box').addEventListener('submit', function (event) {
-    event.preventDefault()
-
-    // 先验证表单数据是否填写完整
-    if (!event.target.name.value || !event.target.phone.value || !event.target.email.value || !event.target.content.value) {
-      alert('Please fill in the complete information')
-      return
-    }
-
-    // 验证邮箱格式是否正确
-    if (!/^[\w-]+(\.[\w-]+)*@[\w-]+(\.[\w-]+)+$/.test(event.target.email.value)) {
-      alert('Please enter the correct email format')
-      return
-    }
-
-    return
-    // 使用Fetch API或其他方式提交表单数据
-    fetch('about/submitForm', {
-      method: 'POST',
-      body: new FormData(event.target),
-    })
-      .then(response => response.json())
-      .then(data => {
-        if (data.status === 'success') {
-          document.getElementById('popupSuccess').style.display = 'block';
-          document.getElementById('sendBtn').style.display = 'none';
-          // 清空表单数据
-          event.target.reset();
-
-        }
-      })
-  })
+  // document.querySelector('.contact_box_right_box').addEventListener('submit', function (event) {
+  //   event.preventDefault()
+  //
+  //   // 先验证表单数据是否填写完整
+  //   if (!event.target.name.value || !event.target.phone.value || !event.target.email.value || !event.target.content.value) {
+  //     alert('Please fill in the complete information')
+  //     return
+  //   }
+  //
+  //   // 验证邮箱格式是否正确
+  //   if (!/^[\w-]+(\.[\w-]+)*@[\w-]+(\.[\w-]+)+$/.test(event.target.email.value)) {
+  //     alert('Please enter the correct email format')
+  //     return
+  //   }
+  //
+  //   return
+  //   // 使用Fetch API或其他方式提交表单数据
+  //   fetch('about/submitForm', {
+  //     method: 'POST',
+  //     body: new FormData(event.target),
+  //   })
+  //     .then(response => response.json())
+  //     .then(data => {
+  //       if (data.status === 'success') {
+  //         document.getElementById('popupSuccess').style.display = 'block';
+  //         document.getElementById('sendBtn').style.display = 'none';
+  //         // 清空表单数据
+  //         event.target.reset();
+  //
+  //       }
+  //     })
+  // })
 </script>
