--- a/public/themes/default/public/head/head.html
+++ b/public/themes/default/public/head/head.html
@@ -8,7 +8,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="screen-orientation" content="portrait">
   <meta name="x5-orientation" content="portrait">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no, minimal-ui">
   <title>CarbonTracking</title>
   <link rel="shortcut icon" href="__TMPL__/static/img/favicon.ico" type="image/x-icon">
   <link rel="stylesheet" href="__TMPL__/static/css/common.css">
@@ -16,4 +17,5 @@
   <link rel="stylesheet" href="__TMPL__/static/css/banner.css">
   <link rel="stylesheet" href="__TMPL__/static/css/footer.css">
   <script src="__TMPL__/static/js/flexible.js"></script>
+  <taglib name="app\portal\taglib\Portal" />
 </head>
