--- a/public/themes/default_en-us/public/header/header.html
+++ b/public/themes/default_en-us/public/header/header.html
@@ -29,9 +29,9 @@
       <a href="http://www.ecocarbontrace.com/" target="_blank">log In</a>
     </div>
     <div class="header_box_language">
-     <!-- <img src="__TMPL__/static/img/language.png" alt="">-->
+      <!-- <img src="__TMPL__/static/img/language.png" alt="">-->
       <a href="?_design_theme=default"> <img src="__TMPL__/static/img/language.png" alt=""></a>
-<!--      <a href="?_design_theme=default">中文</a>|<a href="?_design_theme=default_en-us">En</a>-->
+      <!--      <a href="?_design_theme=default">中文</a>|<a href="?_design_theme=default_en-us">En</a>-->
     </div>
 
     <!-- 手机和平板 -->
@@ -68,6 +68,7 @@
       <img src="__TMPL__/static/img/language.png" alt="">
     </div>
   </div>
+  <taglib name="app\portal\taglib\Portal" />
 </header>
 
 <script>
