--- a/public/themes/default_en-us/portal/products.html
+++ b/public/themes/default_en-us/portal/products.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<link rel="stylesheet" href="__TMPL__/static/css/bootstrap.css">
 <include file="public@head/head" />
 <css file="__TMPL__/static/css/products.css" />
+<script type="text/javascript" src="__TMPL__/static/js/jquery-1.11.2.min.js"></script>
+<script type="text/javascript" src="__TMPL__/static/js/bootstrap.min.js"></script>
 
 <body>
   <!-- header -->
