--- a/public/themes/default_en-us/portal/article.html
+++ b/public/themes/default_en-us/portal/article.html
@@ -12,7 +12,7 @@
   <div class="banner banner_box660">
     <div id="sliderBox" class="banner_box banner_box660">
       <div id="sliderBoxItem" class="banner_box_img sliderBoxItem">
-        <img src="__TMPL__/static/img/banner/productsBanner.png" alt="">
+        <img src="{:cmf_get_image_url($article.thumbnail)}" alt="">
         <div class="banner_box_img_title bannerTitleLeft bannerTextBlack">
           <div class="banner_box_img_title_big">Product Carbon Accounting</div>
           <div class="banner_box_img_title_small">Elye Distribution & Shannon Green Distribution</div>
