--- a/public/themes/default/public/header/header.html
+++ b/public/themes/default/public/header/header.html
@@ -10,19 +10,19 @@
         <a href="{:cmf_url('portal/index/index')}">首页</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/carbontrace.html">碳足迹</a>
+        <a href="{:cmf_url('portal/Carbontrace/index')}">碳足迹</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/products.html">产品</a>
+        <a href="{:cmf_url('portal/Products/index')}">产品</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/supplychain.html">供应链</a>
+        <a href="{:cmf_url('portal/Supplychain/index')}">供应链</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/warehouse.html">仓储</a>
+        <a href="{:cmf_url('portal/Warehouse/index')}">仓储</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/about.html">关于我们</a>
+        <a href="{:cmf_url('portal/About/index')}">关于我们</a>
       </div>
     </div>
     <div class="header_box_btn">
@@ -42,30 +42,29 @@
 
   <div class="header_box_phone_navBox">
     <div class="header_box_phone_navBox_item">
-      <a href="/">Home</a>
+      <a href="{:cmf_url('portal/index/index')}">Home</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="/portal/carbonTrace.html">Carbon Trace</a>
+      <a href="{:cmf_url('portal/Carbontrace/index')}">Carbon Trace</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="/portal/products.html">Products</a>
+      <a href="{:cmf_url('portal/Products/index')}">Products</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="/portal/supplyChain.html">Supply Chain</a>
+      <a href="{:cmf_url('portal/Supplychain/index')}">Supply Chain</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="/portal/warehouse.html">Warehouse</a>
+      <a href="{:cmf_url('portal/Warehouse/index')}">Warehouse</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="/portal/about.html">About</a>
+      <a href="{:cmf_url('portal/About/index')}">About</a>
     </div>
     <div class="header_box_phone_navBox_item">
       <a href="http://www.ecocarbontrace.com/" target="_blank">Log In</a>
     </div>
 
     <div class="header_box_phone_navBox_img">
-      <!--<img src="__TMPL__/static/img/language.png" alt="">-->
-      <a href="?_design_theme=default">中文</a>|<a href="?_design_theme=default_en-us">英文</a>
+      <a href="?_design_theme=default_en-us"> <img src="__TMPL__/static/img/language.png" alt=""></a>
     </div>
   </div>
   <taglib name="app\portal\taglib\Portal" />
