--- a/public/themes/default_en-us/public/header/header.html
+++ b/public/themes/default_en-us/public/header/header.html
@@ -7,22 +7,22 @@
     <!-- pc端显示 -->
     <div class="header_box_nav">
       <div class="header_box_nav_item">
-        <a href="{:cmf_url('portal/index/index')}">Home</a>
+        <a href="{:cmf_url('portal/index/index?_design_theme=default_en-us')}">Home</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/carbontrace.html">Carbon Trace</a>
+        <a href="{:cmf_url('portal/Carbontrace/index?_design_theme=default_en-us')}">Carbon Trace</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/products.html">Products</a>
+        <a href="{:cmf_url('portal/Products/index?_design_theme=default_en-us')}">Products</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/supplychain.html">Supply Chain</a>
+        <a href="{:cmf_url('portal/Supplychain/index?_design_theme=default_en-us')}">Supply Chain</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/warehouse.html">Warehouse</a>
+        <a href="{:cmf_url('portal/Warehouse/index?_design_theme=default_en-us')}">Warehouse</a>
       </div>
       <div class="header_box_nav_item">
-        <a href="/portal/about.html">About</a>
+        <a href="{:cmf_url('portal/About/index?_design_theme=default_en-us')}">About</a>
       </div>
     </div>
     <div class="header_box_btn">
@@ -43,22 +43,22 @@
 
   <div class="header_box_phone_navBox">
     <div class="header_box_phone_navBox_item">
-      <a href="/">Home</a>
+      <a href="{:cmf_url('portal/index/index')}">Home</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="/portal/carbonTrace.html">Carbon Trace</a>
+      <a href="{:cmf_url('portal/Carbontrace/index')}">Carbon Trace</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="/portal/products.html">Products</a>
+      <a href="{:cmf_url('portal/Products/index')}">Products</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="/portal/supplyChain.html">Supply Chain</a>
+      <a href="{:cmf_url('portal/Supplychain/index')}">Supply Chain</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="/portal/warehouse.html">Warehouse</a>
+      <a href="{:cmf_url('portal/Warehouse/index')}">Warehouse</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="/portal/about.html">About</a>
+      <a href="{:cmf_url('portal/About/index')}">About</a>
     </div>
     <div class="header_box_phone_navBox_item">
       <a href="http://www.ecocarbontrace.com/" target="_blank">Log In</a>
