--- a/public/themes/default/public/header/header.html
+++ b/public/themes/default/public/header/header.html
@@ -42,25 +42,25 @@
 
   <div class="header_box_phone_navBox">
     <div class="header_box_phone_navBox_item">
-      <a href="{:cmf_url('portal/index/index')}">Home</a>
+      <a href="{:cmf_url('portal/index/index')}">首页</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="{:cmf_url('portal/Carbontrace/index')}">Carbon Trace</a>
+      <a href="{:cmf_url('portal/Carbontrace/index')}">碳足迹</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="{:cmf_url('portal/Products/index')}">Products</a>
+      <a href="{:cmf_url('portal/Products/index')}">产品</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="{:cmf_url('portal/Supplychain/index')}">Supply Chain</a>
+      <a href="{:cmf_url('portal/Supplychain/index')}">供应链</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="{:cmf_url('portal/Warehouse/index')}">Warehouse</a>
+      <a href="{:cmf_url('portal/Warehouse/index')}">仓储</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="{:cmf_url('portal/About/index')}">About</a>
+      <a href="{:cmf_url('portal/About/index')}">关于我们</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="http://www.ecocarbontrace.com/" target="_blank">Log In</a>
+      <a href="http://www.ecocarbontrace.com/" target="_blank">登录</a>
     </div>
 
     <div class="header_box_phone_navBox_img">
