--- a/public/themes/default_en-us/public/header/header.html
+++ b/public/themes/default_en-us/public/header/header.html
@@ -43,29 +43,29 @@
 
   <div class="header_box_phone_navBox">
     <div class="header_box_phone_navBox_item">
-      <a href="{:cmf_url('portal/index/index')}">Home</a>
+      <a href="{:cmf_url('portal/index/index?_design_theme=default_en-us')}">Home</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="{:cmf_url('portal/Carbontrace/index')}">Carbon Trace</a>
+      <a href="{:cmf_url('portal/Carbontrace/index?_design_theme=default_en-us')}">Carbon Trace</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="{:cmf_url('portal/Products/index')}">Products</a>
+      <a href="{:cmf_url('portal/Products/index?_design_theme=default_en-us')}">Products</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="{:cmf_url('portal/Supplychain/index')}">Supply Chain</a>
+      <a href="{:cmf_url('portal/Supplychain/index?_design_theme=default_en-us')}">Supply Chain</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="{:cmf_url('portal/Warehouse/index')}">Warehouse</a>
+      <a href="{:cmf_url('portal/Warehouse/index?_design_theme=default_en-us')}">Warehouse</a>
     </div>
     <div class="header_box_phone_navBox_item">
-      <a href="{:cmf_url('portal/About/index')}">About</a>
+      <a href="{:cmf_url('portal/About/index?_design_theme=default_en-us')}">About</a>
     </div>
     <div class="header_box_phone_navBox_item">
       <a href="http://www.ecocarbontrace.com/" target="_blank">Log In</a>
     </div>
 
     <div class="header_box_phone_navBox_img">
-      <img src="__TMPL__/static/img/language.png" alt="">
+      <a href="?_design_theme=default"><img src="__TMPL__/static/img/language.png" alt=""></a>
     </div>
   </div>
   <taglib name="app\portal\taglib\Portal" />
