--- a/public/themes/default/public/footer/footer.html
+++ b/public/themes/default/public/footer/footer.html
@@ -6,7 +6,10 @@
           <div class="footer_box_top_left_logo">
             <img src="__ROOT__/upload/{$widget.vars.logo}" alt="">
           </div>
-          <div class="footer_box_top_left_slogan">{$widget.vars.slogan}</div>
+          <div class="footer_box_top_left_slogan">
+            <div>{$widget.vars.slogan}</div>
+            <div class="footer_box_top_left_slogan_bottom">Celticint is a subsidiary of EKO Group</div>
+          </div>
         </widget>
         <div class="footer_box_top_left_icon">
           <include file="public@socialize/socialize" />
