--- a/public/themes/default_en-us/portal/products.html
+++ b/public/themes/default_en-us/portal/products.html
@@ -65,8 +65,7 @@
             <div class="tab-pane productList_box" id="tab{$index}">
         </if>
 
-        <portal:articles item="item" order="post.create_time DESC" page="8" categoryIds="$vo.id"
-                         returnVarName="articles_data">
+        <portal:articles item="item" order="post.create_time DESC" page="8" categoryIds="$vo.id" returnVarName="articles_data">
           <a href="{:url('portal/Article/index',array('id'=>$item.id,'cid'=>$item['categories'][0]['id']))}">
             <div class="productList_box_item">
               <div class="productList_box_item_img">
@@ -118,4 +117,5 @@
   }
 
 </script>
+
 </html>
