--- a/public/themes/default/portal/about.html
+++ b/public/themes/default/portal/about.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <include file="public@head/head" />
 <css file="__TMPL__/static/css/about.css" />
 
 <body>
-<link type="text/css" rel="stylesheet" href="__TMPL__/static/css/ui-dialog.css">
-<script type="text/javascript" src="__TMPL__/static/js/jquery-1.11.2.min.js"></script>
-<script type="text/javascript" src="__TMPL__/static/js/jquery.form.min.js"></script>
-<script type="text/javascript" src="__TMPL__/static/js/Validform_v5.3.2_min.js"></script>
-<script type="text/javascript" src="__TMPL__/static/js/dialog-plus-min.js"></script>
+  <link type="text/css" rel="stylesheet" href="__TMPL__/static/css/ui-dialog.css">
+  <script type="text/javascript" src="__TMPL__/static/js/jquery-1.11.2.min.js"></script>
+  <script type="text/javascript" src="__TMPL__/static/js/jquery.form.min.js"></script>
+  <script type="text/javascript" src="__TMPL__/static/js/Validform_v5.3.2_min.js"></script>
+  <script type="text/javascript" src="__TMPL__/static/js/dialog-plus-min.js"></script>
   <!-- header -->
   <include file="public@header/header" />
 
@@ -136,6 +136,7 @@
     AjaxInitForm('#feedback_form', '#btnSubmit', 1);
   });
 </script>
+
 </html>
 
 <script>
