--- a/public/themes/default/portal/carbontrace.html
+++ b/public/themes/default/portal/carbontrace.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <include file="public@head/head" />
 <css file="__TMPL__/static/css/carbonTrace.css" />
@@ -37,10 +37,12 @@
         <div class="carbonTrace_box">
           <volist name="$widget.vars.varName1" id="vo" length="6">
             <div class="carbonTrace_box_item">
-              <div class="carbonTrace_box_item_img">
-                <img src="__ROOT__/upload/{$vo.icon}" alt="">
+              <div class="carbonTrace_box_item_title">
+                <div class="carbonTrace_box_item_title_img">
+                  <img src="__ROOT__/upload/{$vo.icon}" alt="">
+                </div>
+                {$vo.title}
               </div>
-              <div class="carbonTrace_box_item_title">{$vo.title}</div>
               <div class="carbonTrace_box_item_desc">{$vo.content}</div>
             </div>
           </volist>
