--- a/public/themes/default/portal/supplychain.html
+++ b/public/themes/default/portal/supplychain.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 
 <include file="public@head/head" />
 <css file="__TMPL__/static/css/supplyChain.css" />
