--- a/public/themes/default_en-us/portal/carbontrace.html
+++ b/public/themes/default_en-us/portal/carbontrace.html
@@ -37,10 +37,12 @@
         <div class="carbonTrace_box">
           <volist name="$widget.vars.varName1" id="vo" length="6">
             <div class="carbonTrace_box_item">
-              <div class="carbonTrace_box_item_img">
-                <img src="__ROOT__/upload/{$vo.icon}" alt="">
+              <div class="carbonTrace_box_item_title">
+                <div class="carbonTrace_box_item_title_img">
+                  <img src="__ROOT__/upload/{$vo.icon}" alt="">
+                </div>
+                {$vo.title}
               </div>
-              <div class="carbonTrace_box_item_title">{$vo.title}</div>
               <div class="carbonTrace_box_item_desc">{$vo.content}</div>
             </div>
           </volist>
