--- a/public/themes/default_en-us/public/entertheplatform1/entertheplatform1.html
+++ b/public/themes/default_en-us/public/entertheplatform1/entertheplatform1.html
@@ -43,4 +43,19 @@
       </div>
     </div>
   </widget>
+
+  <div class="main-center enter">
+    <widget name="link">
+      <div class="enter_box">
+        <div class="enter_box_desc">{$widget.vars.desc}</div>
+
+        <div class="enter_box_btn">
+          <a href="http://{$widget.vars.link}" target="_blank">
+            <img src="__ROOT__/upload/{$widget.vars.icon}" alt="">
+            {$widget.vars.link}
+          </a>
+        </div>
+      </div>
+    </widget>
+  </div>
 </div>
