--- a/public/themes/default_en-us/portal/index.html
+++ b/public/themes/default_en-us/portal/index.html
@@ -28,12 +28,13 @@
   <!-- 平台特点 -->
   <div class="white">
     <widget name="platformFeatures">
-      <div class="main-center main-title">
+      <!-- 去掉标题 -->
+      <!-- <div class="main-center main-title">
         <div class="main-center main-title">
           <div class="big-title">{$widget.vars.title}</div>
           <div class="small-title">{$widget.vars.title2}</div>
         </div>
-      </div>
+      </div> -->
 
       <div class="main-center platformFeatures">
         <div class="platformFeatures_top">
