--- a/public/themes/default_en-us/portal/products.html
+++ b/public/themes/default_en-us/portal/products.html
@@ -90,10 +90,8 @@
 
 
 
-  <!-- 合作客户 -->
-  <div class="grey">
-    <include file="public@customer/customer" />
-  </div>
+  <!-- 入驻流程 -->
+  <include file="public@entertheplatform1/entertheplatform1" />
 
   <!-- footer -->
   <include file="public@footer/footer" />
