--- a/public/themes/default_en-us/public/footer/footer.html
+++ b/public/themes/default_en-us/public/footer/footer.html
@@ -8,7 +8,6 @@
           </div>
           <div class="footer_box_top_left_slogan">
             <div>{$widget.vars.slogan}</div>
-            <div class="footer_box_top_left_slogan_bottom">Celticint is a subsidiary of EKO Group</div>
           </div>
         </widget>
         <div class="footer_box_top_left_icon">
@@ -19,37 +18,24 @@
       <!-- 链接 -->
       <div class="footer_box_top_link">
         <div class="footer_box_top_link_item">
-          <div class="footer_box_top_link_item_title">Home</div>
-          <div class="footer_box_top_link_item_subitem">Platform Features</div>
-          <div class="footer_box_top_link_item_subitem">Our Service</div>
+          <div class="footer_box_top_link_item_title">Hainan</div>
+          <div class="footer_box_top_link_item_subitem">Area A, Oasis Industrial Park, Meilan, Haikou, China</div>
         </div>
         <div class="footer_box_top_link_item">
-          <div class="footer_box_top_link_item_title">Carbon Trace</div>
-          <div class="footer_box_top_link_item_subitem">Product Life Cycle Tracing</div>
-          <div class="footer_box_top_link_item_subitem">Interpretation</div>
-          <div class="footer_box_top_link_item_subitem">Carbon tracking database</div>
+          <div class="footer_box_top_link_item_title">Beijing</div>
+          <div class="footer_box_top_link_item_subitem">Room 1710, Building A, Wanda Plaza, Chaoyang, Beijing, China</div>
         </div>
         <div class="footer_box_top_link_item">
-          <div class="footer_box_top_link_item_title">Products</div>
-          <div class="footer_box_top_link_item_subitem">Case Study</div>
-          <div class="footer_box_top_link_item_subitem">Enter the platform</div>
+          <div class="footer_box_top_link_item_title">Dublin</div>
+          <div class="footer_box_top_link_item_subitem">16 Herbert Pl, Dublin 2, Ireland</div>
         </div>
         <div class="footer_box_top_link_item">
-          <div class="footer_box_top_link_item_title">Supply Chain</div>
-          <div class="footer_box_top_link_item_subitem">Supplier Management</div>
-          <div class="footer_box_top_link_item_subitem">Purchasing management</div>
-          <div class="footer_box_top_link_item_subitem">Carbon footprint monitoring</div>
+          <div class="footer_box_top_link_item_title">Ennis</div>
+          <div class="footer_box_top_link_item_subitem">Suite 3, Áras Smith O’Brien Bank Place, Ennis, Co.Clare, Ireland</div>
         </div>
         <div class="footer_box_top_link_item">
-          <div class="footer_box_top_link_item_title">Warehouse</div>
-          <div class="footer_box_top_link_item_subitem">Warehousing services</div>
-          <div class="footer_box_top_link_item_subitem">logistics</div>
-        </div>
-        <div class="footer_box_top_link_item">
-          <div class="footer_box_top_link_item_title">About</div>
-          <div class="footer_box_top_link_item_subitem">About</div>
-          <div class="footer_box_top_link_item_subitem">FAQ</div>
-          <div class="footer_box_top_link_item_subitem">Contact Us</div>
+          <div class="footer_box_top_link_item_title">Abu Dhabi</div>
+          <div class="footer_box_top_link_item_subitem">14th Floor, Al Khatem Tower, Al Maryah Island, Abu Dhabi, UAE</div>
         </div>
       </div>
     </div>
